--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,22 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <body>
+      <!-- Insert these scripts at the bottom of the HTML, but before you use any Firebase services -->
+
+      <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+      <script src="/__/firebase/7.2.2/firebase-app.js"></script>
+
+      <!-- If you enabled Analytics in your project, add the Firebase SDK for Analytics -->
+      <script src="/__/firebase/7.2.2/firebase-analytics.js"></script>
+
+      <!-- Add Firebase products that you want to use -->
+      <script src="/__/firebase/7.2.2/firebase-database.js"></script>
+
+
+      <!-- Initialize Firebase -->
+      <script src="/__/firebase/init.js"></script>
+      
+</body>
   </body>
 </html>
